objects/RMA_Product__c.object
<CustomObject>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <description>2012R04 – Shipping Address: Street</description>
        <inlineHelpText>This is the address where the product needs to be sent back.</inlineHelpText>
        <label>Return Center - Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingZipCode__c</fullName>
        <description>2012R04 – Shipping Address: Zip Code</description>
        <label>Return Center - Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardFormatDateCode__c</fullName>
        <formula>&apos;Standard format PPYYww, alternative format PPYYMMDD&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;StandardFormatDateCode&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardFormat__c</fullName>
        <formula>&apos;Standard format PPYYWWDnnnn, alternative format PPYYMMDDnnnn&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;StandardFormat&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RepairStatus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled by Customer</fullName>
                </value>
                <value>
                    <fullName>RMA Discrepancies</fullName>
                </value>
                <value>
                    <fullName>Not Repairable</fullName>
                </value>
                <value>
                    <fullName>Warranty/Liabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubFamily__c</fullName>
        <label>TECH_SubFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Failure_Mode__c</fullName>
        <description>Dependent Picklist for Failure Mode</description>
        <inlineHelpText>Identify the sub mode in which the above component is failing.</inlineHelpText>
        <label>Sub Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BOM / routing incorrect</fullName>
                </value>
                <value>
                    <fullName>Custom order processed incorrectly</fullName>
                </value>
                <value>
                    <fullName>Delivery done too early</fullName>
                </value>
                <value>
                    <fullName>Delivery done too late</fullName>
                </value>
                <value>
                    <fullName>Documentation or labeling incorrect</fullName>
                </value>
                <value>
                    <fullName>Missing / extra parts</fullName>
                </value>
                <value>
                    <fullName>Packaging is incorrect</fullName>
                </value>
                <value>
                    <fullName>Part selection incorrect</fullName>
                </value>
                <value>
                    <fullName>Adhesion / Blistering</fullName>
                </value>
                <value>
                    <fullName>Burrs / Flashing</fullName>
                </value>
                <value>
                    <fullName>Color or painting is incorrect</fullName>
                </value>
                <value>
                    <fullName>Corrosion / Rust / Water damage</fullName>
                </value>
                <value>
                    <fullName>Cracked / Broken / Deformed</fullName>
                </value>
                <value>
                    <fullName>Foreign substance / Contamination</fullName>
                </value>
                <value>
                    <fullName>Fretting</fullName>
                </value>
                <value>
                    <fullName>Insulation breakdown</fullName>
                </value>
                <value>
                    <fullName>Other appearance failure mode</fullName>
                </value>
                <value>
                    <fullName>Packaging is damaged</fullName>
                </value>
                <value>
                    <fullName>Shape or size is incorrect</fullName>
                </value>
                <value>
                    <fullName>Surface quality is incorrect</fullName>
                </value>
                <value>
                    <fullName>Wiring damaged</fullName>
                </value>
                <value>
                    <fullName>Wiring incorrect</fullName>
                </value>
                <value>
                    <fullName>Angle incorrect</fullName>
                </value>
                <value>
                    <fullName>Camber / Twist / Warp</fullName>
                </value>
                <value>
                    <fullName>Geometry defect / Shape / Alignment</fullName>
                </value>
                <value>
                    <fullName>Size / Diameter / Radius</fullName>
                </value>
                <value>
                    <fullName>Undesired features</fullName>
                </value>
                <value>
                    <fullName>Weld not conforming</fullName>
                </value>
                <value>
                    <fullName>Calibration not possible</fullName>
                </value>
                <value>
                    <fullName>Circuit does not close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SynchronizationMessage__c</fullName>
        <label>Synchronization Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_CR__c</fullName>
        <formula>TEXT( CustomerResolution__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CaseID__c</fullName>
        <formula>IF( ISBLANK( RMA__r.Case__c ) , RMA__r.OdasevaArchivedCaseNumber__c, RMA__r.Case__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CaseID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_IsScriptRun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Oct15 release</description>
        <label>TECH_IsScriptRun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_Mass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_Mass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_PriorLS__c</fullName>
        <label>TECH_PriorLS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ProductCondition__c</fullName>
        <formula>TEXT( RMA__r.ProductCondition__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_RequestType__c</fullName>
        <label>TECH_RequestType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TEX__c</fullName>
        <formula>IF(RMA__r.TEX__c !=null, CASESAFEID( RMA__r.TEX__c) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_TEX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueField__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_UniqueField</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tech_GMRCode__c</fullName>
        <label>Tech_GMRCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pieces</fullName>
                    <default>true</default>
                    <label>Pieces</label>
                </value>
                <value>
                    <fullName>Boxes</fullName>
                </value>
                <value>
                    <fullName>Palets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidationStatus__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyStatus__c</fullName>
        <label>Warranty Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Out of warranty</fullName>
                </value>
                <value>
                    <fullName>Standard warranty</fullName>
                </value>
                <value>
                    <fullName>Extended warranty</fullName>
                </value>
                <value>
                    <fullName>Service warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Return Items</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
        <columns>RMA__c</columns>
        <columns>AccountCountry__c</columns>
        <columns>CustomerResolution__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>NAME</columns>
        <columns>RepairStatus__c</columns>
        <columns>LogisticsStatus__c</columns>
        <columns>ReturnCenter__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>IED protection relay,IED Other,IED ARC,IED Supp,OPT Self,MED Basic,OPT Stan</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>MED Stan,OPT Adv,MED adv,OPT Spec,MED Spec,Protec relay,IED sett,Prot relay</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>IED leg,OPT Arc,MED Arc,OPT Meas</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>Substation Automation,SA OPT,SA MED,SA RTU,SA Gat,SA CCS,SA Tech,SA Adv,SA Train</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>SA Leg</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>Feeder Automation,Telemetry,FA OPT,FA MED,FA Sup</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>contains</operation>
            <value>TMY MED,TMY Other,TMY OPT,TMY Acc,TMY Sup</value>
        </filters>
        <label>ENE-AUT-Return Items</label>
        <language>en_US</language>
        <sharedTo>
            <group>ENE_AUT_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_submitted</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>ProductFamily__c</columns>
        <columns>ProductCondition__c</columns>
        <columns>CustomerResolution__c</columns>
        <columns>ReturnCenter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>ApprobationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LogisticsStatus__c</field>
            <operation>equals</operation>
            <value>In transit to Local Logistic Center *,In Transit to Return Center</value>
        </filters>
        <label>All_submitted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Repair_PFSEAP_ALL</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RepairStatus__c</columns>
        <columns>ReceivedbyReturnCenter__c</columns>
        <columns>SentBacktoCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReturnCenterCountry__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>YUOHTSUK,SaChumth,arpithak</value>
        </filters>
        <label>Repair_PFSEAP_ALL</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_PFAP_CCC</group>
            <group>JP_PFSG_CCC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Repair_PFSEAP_ALL1</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RepairStatus__c</columns>
        <columns>ReceivedbyReturnCenter__c</columns>
        <columns>SentBacktoCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReturnCenterCountry__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>YUOHTSUK,SaChumth,arpithak</value>
        </filters>
        <filters>
            <field>RepairStatus__c</field>
            <operation>notEqual</operation>
            <value>Repair completed,Canceled</value>
        </filters>
        <label>Repair_PFSEAP_Not Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_PFAP_CCC</group>
            <group>JP_PFSG_CCC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RepairStatus__c</columns>
        <columns>ReceivedbyReturnCenter__c</columns>
        <columns>SentBacktoCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>SIGNALING</value>
        </filters>
        <filters>
            <field>ShippingCountry__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>02.シグナリング修理一覧(今月)</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_Digital_L3</group>
            <group>JP_SIG_CCC</group>
            <role>IND_H2I_HMI_OSAKA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RepairStatus__c</columns>
        <columns>ReceivedbyReturnCenter__c</columns>
        <columns>SentBacktoCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>SIGNALING</value>
        </filters>
        <filters>
            <field>ShippingCountry__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>RepairStatus__c</field>
            <operation>notEqual</operation>
            <value>Repair completed,Canceled</value>
        </filters>
        <label>01.シグナリング修理未完了一覧</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_Digital_L3</group>
            <group>JP_SIG_CCC</group>
            <role>IND_H2I_HMI_OSAKA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_RMA</fullName>
        <booleanFilter>((1 and 5) OR 2) AND 3 AND 4 AND 6</booleanFilter>
        <columns>RepairStatus__c</columns>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LogisticsStatus__c</columns>
        <columns>WarrantyStatus__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LogisticsStatus__c</field>
            <operation>equals</operation>
            <value>In transit to Local Logistic Center *</value>
        </filters>
        <filters>
            <field>RepairStatus__c</field>
            <operation>equals</operation>
            <value>Quotation in progress</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>SIGNALING</value>
        </filters>
        <filters>
            <field>ShippingCountry__c</field>
            <operation>equals</operation>
            <value>JAPAN</value>
        </filters>
        <filters>
            <field>RepairStatus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CustomerResolution__c</field>
            <operation>notEqual</operation>
            <value>TEX</value>
        </filters>
        <label>002.シグナリングRMA_リペア確認必要</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>X03</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RepairStatus__c</columns>
        <columns>ReceivedbyReturnCenter__c</columns>
        <columns>SentBacktoCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>SIGNALING</value>
        </filters>
        <filters>
            <field>ShippingCountry__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>03.シグナリング修理一覧(先月)</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_Digital_L3</group>
            <group>JP_SIG_CCC</group>
            <role>IND_H2I_HMI_OSAKA</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return Items</pluralLabel>
    <recordTypes>
        <fullName>ReturnItemLayoutEdit</fullName>
        <active>true</active>
        <label>Return Item Layout - Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReturnItemLayoutEditTEX</fullName>
        <active>true</active>
        <label>Return Item Layout - Edit TEX</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReturnItemLayoutNew</fullName>
        <active>true</active>
        <label>Return Item Layout - New</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReturnItemLayoutNewTEX</fullName>
        <active>true</active>
        <label>Return Item Layout - New TEX</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReturnItemLayoutValid</fullName>
        <active>true</active>
        <label>Return Item Layout - Valid</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RI_VR01_QuantityLessThanOne</fullName>
        <active>true</active>
        <description>2012R4 - This Validation rule is to restrict the user to enter the quantity as less than one.</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c), 
         Quantity__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity should not be less than one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_APR14RR01_RequestTypeCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c),RMA__r.TECH_RequestType__c =&apos;Repair&apos;, RMA__r.TECH_RequestType__c!=TECH_RequestType__c )</errorConditionFormula>
        <errorMessage>This Return Request only accepts items for repair. Please create a new Return Request for other resolution types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_APR14RR02_BillingMethodNullCheck</fullName>
        <active>true</active>
        <description>Billing Method Null Check for Out of warranty</description>
        <errorConditionFormula>AND( 
NOT($User.BypassVR__c) , 
if( AND(ISPICKVAL(WarrantyStatus__c, &apos;Out of warranty&apos;), ISPICKVAL(BillingMethod__c,&apos;&apos;)),true,false))</errorConditionFormula>
        <errorDisplayField>BillingMethod__c</errorDisplayField>
        <errorMessage>Billing Method is required when the Warranty Status is Out of warranty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_APR14RR02_RequestTypeCheckReturn</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c),RMA__r.TECH_RequestType__c =&apos;Return&apos;, RMA__r.TECH_RequestType__c!=TECH_RequestType__c )</errorConditionFormula>
        <errorMessage>This Return Request does not accept items for repair. Please create a new Return Request for other resolution types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_APR15I2P01_SympotomCheckforDefect</fullName>
        <active>true</active>
        <description>RI_VR_APR15I2P01_SympotomCheckforDefect</description>
        <errorConditionFormula>IF(
	ISNEW(),
	And(
		NOT($User.BypassVR__c),
		ISPICKVAL(ProductCondition__c, &apos;Defective&apos;), 
		RMA__r.Case__r.CaseSymptom__c=&apos;&apos; , RMA__r.Case__r.CaseSubSymptom__c =&apos;&apos;
	),
	false
	)</errorConditionFormula>
        <errorMessage>The symptom and subsymptom on Case are mandatory in order to create a Return Item with Product Condition = Defective.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_DEC12RMA01_DisallowEditShippingAdd</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
	NOT($User.BypassVR__c),
Not( ISNEW() ),
NOT(ISBLANK(PRIORVALUE(ReturnCenter__c ))),
	Other__c=FALSE,
	OR
	(
		ISCHANGED( ShippingStreet__c ),ISCHANGED(ShippingAdditionalAddress__c),ISCHANGED(ShippingCity__c),
		ISCHANGED(ShippingCountry__c),ISCHANGED(ShippingCounty__c),
		ISCHANGED(ShippingPOBox__c),ISCHANGED(ShippingPOBoxZip__c),
		ISCHANGED(ShippingStateProvince__c),ISCHANGED(ShippingZipCode__c),
		ISCHANGED(ShippingLocalCity__c),ISCHANGED(ShippingLocalAdditionalAddress__c),ISCHANGED(ShippingLocalCounty__c),ISCHANGED(ShippingStreetLocalLang__c),
		ISCHANGED(ShippingContactName__c),ISCHANGED(ShippingFax__c),ISCHANGED(ShippingPhone__c)

	)

)</errorConditionFormula>
        <errorMessage>Manual Address Override needs to be selected in order to change the return center address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_DEC12RMA02_DoNotChangeProdCond</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c)&amp;&amp; 
 Text(RMA__r.ProductCondition__c) != Text( ProductCondition__c)</errorConditionFormula>
        <errorMessage>Return Item should have same Product Condition as Return Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_DEC12RMA05_NotAllowUpdtOther</fullName>
        <active>true</active>
        <description>I2P-RR: DEC12RELEASE - If Manual Address Override is checked not allow to uncheck it.</description>
        <errorConditionFormula>AND 
( 
NOT($User.BypassVR__c) , 
NOT( ISNEW() ),
PRIORVALUE(Other__c)=True,
Other__c=False
)</errorConditionFormula>
        <errorMessage>Force Manual Selection cannot be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_DEC12RMA06_NotAllowUpdteCommercial</fullName>
        <active>true</active>
        <description>I2P December 2012
I2P Oct 2014 - Changed the Error message as the label is changed from commercial reference to Product</description>
        <errorConditionFormula>AND
(
NOT($User.BypassVR__c),
Not( ISNEW() ),
 OR(ISCHANGED( Name ) ,ISCHANGED( CommercialReference__c ) ,ISCHANGED( Family__c ))
)</errorConditionFormula>
        <errorMessage>Product cannot be changed once added . Please delete this record and create a new Return Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_JUN16I2P01_CheckSafeDomain</fullName>
        <active>true</active>
        <description>Check safe domain in ContactEmail__c</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c), VLOOKUP($ObjectType.SafeDomains__c.Fields.Name, $ObjectType.SafeDomains__c.Fields.Name,SUBSTITUTE(ContactEmail__c,left(ContactEmail__c,FIND(&quot;@&quot;, ContactEmail__c)), &quot;&quot;))!=SUBSTITUTE(ContactEmail__c,left(ContactEmail__c,FIND(&quot;@&quot;, ContactEmail__c)), &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>ContactEmail__c</errorDisplayField>
        <errorMessage>Please enter valid email address within a Schneider safe domain.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_MAY13RR01_RprStatusEqualsAwtngFwd</fullName>
        <active>true</active>
        <description>RI_VR_MAY13RR01_RprStatusEqualsAwtngFwdRtnCntr</description>
        <errorConditionFormula>AND
(
NOT($User.BypassVR__c),
      (ISPICKVAL( CustomerResolution__c, &apos;REP&apos;))
,
 ISNULL( ReceivedbyLocalLogisticsCenter__c),
 ISPICKVAL( LogisticsStatus__c, &apos;Awaiting forward to return Center *&apos;) 
)</errorConditionFormula>
        <errorDisplayField>ReceivedbyLocalLogisticsCenter__c</errorDisplayField>
        <errorMessage>Received by local logistic center date needs to be filled in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_MAY13RR04_ForwarderToRC</fullName>
        <active>true</active>
        <description>I2P RR May 2013 Release</description>
        <errorConditionFormula>AND
(
NOT($User.BypassVR__c),
(ISPICKVAL( CustomerResolution__c, &apos;REP&apos;))
,
 ISNULL( ForwardedToReturnCenter__c),
 ISPICKVAL( LogisticsStatus__c, &apos;In transit to return Center&apos;),
NOT(ISNULL(ReceivedbyLocalLogisticsCenter__c))
)</errorConditionFormula>
        <errorDisplayField>ForwardedToReturnCenter__c</errorDisplayField>
        <errorMessage>Please specify the date on transit to return center</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_OCT13RR01_ExpertCenterCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) , 
NOT( ISNEW() ),PRIORVALUE(Other__c)==False,Other__c==True, (PRIORVALUE(ReturnCenter__c)==ReturnCenter__c))</errorConditionFormula>
        <errorDisplayField>ReturnCenter__c</errorDisplayField>
        <errorMessage>Return Center needs to be changed when Force Manual Selection is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_OCT13RR02_ExpertCenterBlankCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) , 
NOT( ISNEW() ),Other__c==True, ReturnCenter__c==null)</errorConditionFormula>
        <errorMessage>The Return Center value should not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_OCT13RR03_CancelaltinReasonMandato</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c) , 
NOT( ISNEW() ),  ISPICKVAL(ApprovalStatus__c , &apos;Cancelled&apos;), Cancelled_Reason__c =&apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Cancelled_Reason__c</errorDisplayField>
        <errorMessage>Please enter the reason for cancellation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_OCT13RR04_ApprovalStatusCannotBeBl</fullName>
        <active>true</active>
        <description>Release - OCT2013: Approval Status cannot set to blank after Canceled.</description>
        <errorConditionFormula>AND(
NOT($User.BypassVR__c) , 
  ISPICKVAL(PRIORVALUE(ApprovalStatus__c),&apos;Cancelled&apos;),
  ISPICKVAL(ApprovalStatus__c,&apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>ApprovalStatus__c</errorDisplayField>
        <errorMessage>Approval status cannot be made blank once cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RI_VR_OCT13RR05_DisallowEditReturnCente</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT($User.BypassVR__c), 
Not( ISNEW()), 
NOT(ISBLANK(PRIORVALUE(ReturnCenter__c ))), 
ISCHANGED( ReturnCenter__c), 
Other__c=FALSE 
)</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>Force Manual Selection needs to be selected in order to change the Return Center.</errorMessage>
    </validationRules>
</CustomObject>